--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -4,9 +4,9 @@
     <ngb-carousel [interval]="10000" *ngIf="stories$ | async as stories">
       <ng-template ngbSlide *ngFor="let story of stories">
         <div class="picsum-img-wrapper">
-          <img [src]="story.image" alt="Random first slide" />
+          <img [src]="story.image" height="20%" alt="Image" />
         </div>
-        <div class="carousel-caption">
+        <div class="carousel-caption" *ngIf="!feed.onlyImage">
           <h3>{{ story.title }}</h3>
           <p>{{ story.contentSnippet }}</p>
         </div>
