--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -4,7 +4,7 @@
     <ngb-carousel [interval]="10000" *ngIf="stories$ | async as stories">
       <ng-template ngbSlide *ngFor="let story of stories">
         <div class="picsum-img-wrapper">
-          <img [src]="story.image" height="20%" alt="Image" />
+          <img [src]="story.image" height="600px" alt="Image" />
         </div>
         <div class="carousel-caption" *ngIf="!feed.onlyImage">
           <h3>{{ story.title }}</h3>
